fix timer spacing

--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ footer {
 
   #container {
     max-width: 100%;
-    height: 100%;
+    height: 80%;
     margin: 0 auto;
     margin-top: 3rem;
     display: inline-block;
@@ -493,7 +493,7 @@ footer {
 
   #poem {
     width: 100%;
-    height: 80%;
+    height: 100%%;
     margin: 0 auto;
     display: inline-block;
     padding: auto auto;
